[gd_scene load_steps=2 format=3 uid="uid://dv41sixkh67ed"]

[ext_resource type="Script" uid="uid://grvvsm0ysy24" path="res://game/add_online_dialog.gd" id="1_m5cld"]

[node name="AddOnlineDialog" type="AcceptDialog"]
oversampling_override = 1.0
size = Vector2i(500, 500)
visible = true
script = ExtResource("1_m5cld")

[node name="VBox" type="VBoxContainer" parent="."]
anchors_preset = -1
anchor_left = 0.078431375
anchor_top = 0.049382716
anchor_right = 0.92156863
anchor_bottom = 0.5802469
offset_left = -19.215687
offset_top = -9.691359
offset_right = 19.215698
offset_bottom = 134.87653
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="URLInput" type="LineEdit" parent="VBox"]
layout_mode = 2
text = "Example: https://www.svgrepo.com/show/530651/monitor.svg"
placeholder_text = "Enter the URL here (try to use simple svgs)"

[node name="NameInput" type="LineEdit" parent="VBox"]
layout_mode = 2
placeholder_text = "Name of the svg"

[node name="LoadButton" type="Button" parent="VBox"]
layout_mode = 2
text = "Load"

[node name="PreviewRect" type="TextureRect" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3
